# aoc-2022

./: .gitignore  CMakeLists.txt
days/: CMakeLists.txt  day1.c  day10.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c
shared/: CMakeLists.txt  charset.c  charset.h  common.c  common.h  list.c  list.h  node.c  node.h  tree.c  tree.h
weeks/: CMakeLists.txt  week1  week1.c
